# NVTX

./: .gitignore  README.md
.github/workflows/: cibw.yml  test.yml
c/: CMakeLists.txt  README.md  nvtxImportedTargets.cmake
c/include/nvtx3/: nvToolsExt.h  nvToolsExtCounters.h  nvToolsExtCuda.h  nvToolsExtCudaRt.h  nvToolsExtMem.h  nvToolsExtMemCudaRt.h  nvToolsExtOpenCL.h  nvToolsExtPayload.h  nvToolsExtPayloadHelper.h  nvToolsExtPayloadSemanticsArray.h  nvToolsExtPayloadSemanticsBind.h  nvToolsExtPayloadSemanticsCorrelation.h  nvToolsExtPayloadSemanticsCounters.h  nvToolsExtPayloadSemanticsEventScope.h  nvToolsExtPayloadSemanticsTimeSource.h  nvToolsExtSemanticsCounters.h  nvToolsExtSemanticsScope.h  nvToolsExtSync.h  nvtx3.hpp
c/include/nvtx3/nvtxDetail/: nvtxExtImplCounters_v1.h  nvtxExtImplMemCudaRt_v1.h  nvtxExtImplMem_v1.h  nvtxExtImplPayload_v1.h  nvtxExtPayloadHelperInternal.h  nvtxExtPayloadTypeInfo.h  nvtxImpl.h  nvtxImplCore.h  nvtxImplCudaRt_v3.h  nvtxImplCuda_v3.h  nvtxImplOpenCL_v3.h  nvtxImplSync_v3.h  nvtxInit.h  nvtxInitDecls.h  nvtxInitDefs.h  nvtxTypes.h
c/include/nvtx3/nvtxExtDetail/: nvtxExtImpl.h  nvtxExtImplCounters_v1.h  nvtxExtImplMem1.h  nvtxExtImplMemCudaRt1.h  nvtxExtImplMem_v1.h  nvtxExtImplPayload_v1.h  nvtxExtInit.h
cpp/: .gitignore  CMakeLists.txt  README.md  nvtx3.hpp
cpp/benchmarks/: CMakeLists.txt
cpp/benchmarks/nvtx/: nvtx_benchmark.cpp
cpp/cmake/: CPM.cmake
cpp/cmake/Modules/: ConfigureGoogleTest.cmake
cpp/doxygen/: Doxyfile
cpp/include/nvtx3/: nvtx3.hpp
cpp/tests/: CMakeLists.txt  cupti_nvtx_injection.hpp  nvtx_tests.cpp
doc/doxygen/: dir_674c15d5b3e4baf4b311b9413e94674a.html  dir_bb8e77a6cec6232aa64213bdc86834eb.html  functions.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group___d_o_m_a_i_n_s.html  group___e_v_e_n_t___a_t_t_r_i_b_u_t_e_s.html  group___g_e_n_e_r_a_l.html  group___m_a_r_k_e_r_s___a_n_d___r_a_n_g_e_s.html  group___s_t_r_i_n_g___r_e_g_i_s_t_r_a_t_i_o_n.html  group___s_y_n_c_h_r_o_n_i_z_a_t_i_o_n.html  modules.html  nv_tools_ext_cuda_8h_source.html  nv_tools_ext_cuda_rt_8h_source.html  nv_tools_ext_open_c_l_8h_source.html  structnvtx_event_attributes__v2-members.html  structnvtx_resource_attributes__v0-members.html  structnvtx_resource_attributes__v0.html  structnvtx_sync_user_attributes__v0-members.html  structnvtx_sync_user_attributes__v0.html  unionnvtx_event_attributes__v2_1_1payload__t.html
docs/: index.html
docs/build_scripts/: how_to_generate_doxygen_for_nvtx.txt
docs/doxygen/: PAGE_SYNCHRONIZATION.html  _p_a_g_e__s_y_n_c_h_r_o_n_i_z_a_t_i_o_n.html  annotated.html  classes.html  dir_04ee567747d9571f6969f582a80c424d.html  dir_48b95086e7eb28d79ef283b47c5fa0c6.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  graph_legend.html  group___d_o_m_a_i_n_s.html  index.html  (+29 more)
docs/doxygen-cpp/: annotated.html  classes.html  classnvtx3_1_1v1_1_1category-members.html  classnvtx3_1_1v1_1_1category.html  classnvtx3_1_1v1_1_1category__inherit__graph.map  classnvtx3_1_1v1_1_1category__inherit__graph.md5  classnvtx3_1_1v1_1_1color-members.html  classnvtx3_1_1v1_1_1color.html  classnvtx3_1_1v1_1_1domain-members.html  classnvtx3_1_1v1_1_1domain.html  classnvtx3_1_1v1_1_1event__attributes-members.html  classnvtx3_1_1v1_1_1event__attributes.html  classnvtx3_1_1v1_1_1message-members.html  classnvtx3_1_1v1_1_1message.html  classnvtx3_1_1v1_1_1named__category__in-members.html  classnvtx3_1_1v1_1_1named__category__in.html  classnvtx3_1_1v1_1_1named__category__in__coll__graph.map  classnvtx3_1_1v1_1_1named__category__in__coll__graph.md5  classnvtx3_1_1v1_1_1payload-members.html  classnvtx3_1_1v1_1_1payload.html  classnvtx3_1_1v1_1_1registered__string__in-members.html  classnvtx3_1_1v1_1_1registered__string__in.html  classnvtx3_1_1v1_1_1scoped__range__in-members.html  classnvtx3_1_1v1_1_1scoped__range__in.html  classnvtx3_1_1v1_1_1unique__range__in-members.html  classnvtx3_1_1v1_1_1unique__range__in.html  dir_0f270e201b07a4d190d27f3db28cd57f.html  dir_0f270e201b07a4d190d27f3db28cd57f_dep.map  dir_0f270e201b07a4d190d27f3db28cd57f_dep.md5  dir_1784a01aa976a8c78ef5dfc3737bcac8.html  dir_19225156eb7ba052e31d1a736469917a.html  dir_2d10db7395ecfee73f7722e70cabff64.html  dir_2d10db7395ecfee73f7722e70cabff64_dep.map  dir_2d10db7395ecfee73f7722e70cabff64_dep.md5  dir_48b95086e7eb28d79ef283b47c5fa0c6.html  dir_5f88615774d40519f750f3391530866e.html  dir_5f88615774d40519f750f3391530866e_dep.map  dir_5f88615774d40519f750f3391530866e_dep.md5  dir_68d96ca9a2bee83e37a0f989f99b8354.html  dir_68d96ca9a2bee83e37a0f989f99b8354_dep.map  (+84 more)
python/: .flake8.cython  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
tests/: Attributes.cpp  CMakeLists.txt  Calls.cpp  CoverageC.c  CoverageCounter.c  CoverageCuda.cu  CoverageMem.c  CoverageMemCudaRt.cu  CoveragePayload.c  DllHelper.h  Domains.cpp  InjectionHelper.h  LinkerDupesFileA.cpp  LinkerDupesFileB.cpp  LinkerDupesMain.cpp  NamedCategories.cpp  PrettyPrintersNvtxC.h  PrettyPrintersNvtxCpp.h  PrintInjection.cpp  README.txt  RegisteredStrings.cpp  RunTest.cpp  Same.h  SelfInjection.cpp  SelfInjection.h  TestCoverage.h  TestSelfInjection.cpp
tools/: .clang-format  CMakeLists.txt
tools/benchmarks/: CMakeLists.txt
tools/benchmarks/nvtx/: nvtx_benchmark.cpp
tools/cmake/Modules/: ConfigureGoogleBenchmark.cmake
tools/docs/: doxyfile-c  doxyfile-cpp  generate-readme.py  how_to_generate_doxygen_for_nvtx.txt
tools/nvtxw/rs/: Cargo.toml  LICENSE.txt  README.md  build.rs  check.sh
tools/nvtxw/rs/src/: lib.rs  nvtxw.rs  nvtxw_bindings.rs
tools/nvtxw/rs/src/nvtxw-sys/include/nvtx3/: nvToolsExt.h  nvToolsExtPayload.h
tools/nvtxw/rs/src/nvtxw-sys/include/nvtx3/nvtxDetail/: nvtxExtHelperMacros.h  nvtxExtImpl.h  nvtxExtImplPayload_v1.h  nvtxExtInit.h  nvtxExtTypes.h  nvtxLinkOnce.h
tools/nvtxw/rs/src/nvtxw-sys/include/nvtxw3/: nvtxw3.h
tools/nvtxw/rs/src/nvtxw-sys/src/nvtxw3/: nvtxw3.c
tools/tests/: CMakeLists.txt  nvtx_tests.cpp
(+121 files in other folders)
