# SPDX-FileCopyrightText: Copyright (c) 2023-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See LICENSE.txt for license information.

[package]
name = "nvtxw"
version = "0.1.0"
authors = ["NVIDIA Corporation"]
description = "Rust bindings for the NVIDIA® Tools Extension SDK Writer API (NVTXW)"
repository = "https://github.com/NVIDIA/NVTX"
readme = "README.md"
license = "Apache-2.0 WITH LLVM-exception"

edition = "2021"
rust-version = "1.70"

[dependencies]
static_assertions = "1.1"

[build-dependencies]
bindgen = "0.69"
cc = "1"
